Finished up backend configuration with AppWrite and successfully implemented writing search query updates to Database in preparation for recommendation algorithm.

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ EXPO_PUBLIC_MOVIE_API_KEY=eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI3NmI2N2JmMDZjYTBiMmVkM
 EXPO_PUBLIC_APPWRITE_PROJECT_ID=6828c5bc001519dfb27d
 EXPO_PUBLIC_APPWRITE_PROJECT_ID = 6828c5bc001519dfb27d
 EXPO_PUBLIC_APPWRITE_ENDPOINT = https://nyc.cloud.appwrite.io/v1
+EXPO_PUBLIC_APPWRITE_DATABASE_ID=685a24e40039943e7d30
+EXPO_PUBLIC_APPWRITE_COLLECTION_ID=685a2521003e0f8b10ee
